<resources>
    <string name="app_name">Madness Book Sharing</string>
    <string name="name">Name</string>
    <string name="mail">E-mail</string>
    <string name="bio">Short bio</string>
    <string name="location">Location</string>
    <string name="language">Language</string>
    <string name="invalidName">Invalid name</string>
    <string name="invalidMail">Invalid e-mail</string>
    <string name="invalidPhone">Invalid phone</string>
    <string name="city">City</string>
    <string name="dateOfBirth">Date of birth</string>
    <string name="phoneNumber">Phone number</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="persInfo">Personal info</string>
    <string name="bioHint">Tell me something about you</string>
    <string name="DoBHint">Your birthday</string>
    <string name="nameHint">Your name</string>
    <string name="cityHint">Your city</string>
    <string name="phoneHint">Your phone #</string>
    <string name="mailHint">Your email</string>
    <string name="booksHint">Which are your favourite books?</string>
    <string name="books">Your favourite books</string>
    <string name="sign_in_cancelled">Sign-in cancelled</string>
    <string name="no_internet">No internet connection</string>
    <string name="unknown_error">Unknown error</string>
    <string name="sign_in_ok">Successful sign-in</string>
    <string name="isbn">ISBN</string>
    <string name="insertISBN">Insert ISBN</string>
    <string name="addBook">Add a book to your library</string>
    <string name="finishingAddingBook">Your new book</string>
    <string name="condition">Condition:</string>
    <string name="cond_vUsed">Very used</string>
    <string name="cond_used">Used</string>
    <string name="cond_new">New</string>
    <string name="missingCondition">You haven\'t selected a condition!</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="publisher">Publisher</string>
    <string name="pubDate">Publication Year</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="missingData">Please fill in all the missing information</string>
    <string name="wrongYear">The year is wrong, please use a valid year</string>
    <string name="noThumbnail">Please add a thumbnail</string>
    <string name="selectCategory">Select one or more categories to view</string>
    <string name="cancelBooking">Cancel booking request</string>
    <string name="cancelBookingDesc">Do you really want to remove the booking request on this book and make it available again?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="requestTitle">New book request</string>
    <string name="requestBody">You have a new request for </string>
    <string name="receivedBook">I\'ve received the book</string>
    <string name="returnedBook">I\'ve returned the book</string>
    <string name="reviewTitle">Review</string>
    <string name="reviewBody">Do you want to write a review on the user borrowing this book?</string>
    <string name="reviewButton">Write a review for the user borrowing this book</string>
    <string name="reviewButtonDone">You\'ve already reviewed the user borrowing this book</string>
    <string name="requestCancelledBody">is not available anymore. Your request for this book has been cancelled.</string>
    <string name="requestCancelledTitle">Request cancelled</string>
    <string name="requestAcceptedBody1">Your request for</string>
    <string name="requestAcceptedBody2">has been accepted. The book should now appear in "Borrowed Books".</string>
    <string name="requestAcceptedTitle">Request accepted</string>

    <string name="facebook_application_id" translatable="false">210891089496907</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb210891089496907</string>
    <string name="twitter_consumer_key" translatable="false">IzDjvZBZFmgBYCffo8OZQjUa0</string>
    <string name="twitter_consumer_secret" translatable="false">cOWgHpiJQpdLYuJXvP6E25M5ehchCBSomqcaZEVDDjYpc0WHZj</string>

    <string name="showInfoBookDescriptionConditionHeader">Condition:</string>
    <string name="showInfoBookDescriptionCardHeader">Description</string>
    <string name="google_maps_key">AIzaSyDpOyrC-3yyGgOqGNMXwL2k8FOba2LKMh8</string>
    <string name="title_location_permission">Device location request</string>
    <string name="text_location_permission">Pazzia Libro Condivisione would like to access your device position</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="AllBooks">All Books</string>
    <string name="Library">My Library</string>
    <string name="BorrowedBooks">Borrowed Books</string>

    <string name="uploadError">This book can\'t be uploaded</string>
    <string name="dragTheMarker">Keep pressed and drag the marker</string>
    <string name="chat_edit_text">Type a message</string>

    <string name="location_not_available">Location not availble, turn it on</string>
    <string name="select_book_map">Select a book and borrow it</string>
    <string name="borrowed_book">Borrowed!</string>
    <string name="no_book_selected">Please select a book to borrow</string>



    <string name="final_book_confimation_owner">Owner:</string>

    <string name="no_borrowed_books">Borrow some books to fill up this page!</string>

    <string name="missing_book_request">At the moment there aren\'t any requests for this book... </string>
    <string name="show_reviews_text">Reviews</string>

    <!-- tutorial titles-->
    <string name="tutorial_welcome">WELCOME</string>
    <string name="tutorial_signin">SIGN IN</string>
    <string name="tutorial_profile">PERSONAL PROFILE</string>
    <string name="tutorial_chat">CHAT</string>
    <string name="tutorial_letsstart">LET\'S START</string>

    <!-- my library -->
    <string name="missing_book_my_library">At the moment there aren\'t any books in your library...</string>

    <!-- reviews -->
    <string name="missing_reviews">No reviews available</string>

    <!-- chat -->
    <string name="no_msg">No message to view</string>

    <!-- tutorial text-->
    <string name="tutorial_welcome_text">Welcome to Madness Book Sharing! :D With this app you\'ll be able to share books with other people</string>
    <string name="tutorial_signin_text">Authenticate yourself using your email or your social accounts</string>
    <string name="tutorial_profile_text">Fill your personal profile with your personal informations</string>
    <string name="tutorial_chat_text">Use the chat to communicate to other users</string>
    <string name="tutorial_letsstart_text">Look for the book you like and borrow it from other users</string>
</resources>