<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/rating_card"
            android:layout_centerHorizontal="true"
            android:layout_width="250dp"
            android:layout_height="75dp"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="8dp"
            card_view:cardBackgroundColor="#EEEEEE"
            android:layout_marginLeft="64dp"
            android:layout_marginRight="64dp"
            android:layout_marginTop="260dp"
            android:layout_marginBottom="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:layout_marginRight="18dp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:layout_toLeftOf="@id/profile_separator_view"

                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:rating="5.0"
                    android:progressTint="@color/colorAccent"
                    android:stepSize="1.0" />


                <View
                    android:id="@+id/profile_separator_view"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/light_gray"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:text="Prova"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:layout_toRightOf="@id/profile_separator_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F5F5F5">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@drawable/shadow"
                android:elevation="2dp">

                <ImageButton
                    android:id="@+id/editProfileButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_edit_32dp_white"
                    android:layout_margin="8dp"
                    android:layout_alignParentRight="true"
                    android:background="@android:color/transparent"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/showImageProfile"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="48dp"
                    android:layout_width="144dp"
                    android:layout_height="144dp"
                    android:src="@drawable/ic_account_circle_144dp"
                    android:elevation="0dp"/>
                <!--
                app:civ_border_width="2dp"
                app:civ_border_color="#FF000000"
                -->

                <TextView
                    android:id="@+id/showTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/showImageProfile"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="8dp"
                    android:gravity="center_horizontal"
                    android:hint="@string/nameHint"
                    android:textColorHint="@color/text_white"
                    android:textColor="@color/text_white"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:gravity="center_horizontal"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/showTextName"
                    android:textColorHint="@color/text_white"
                    android:textColor="@color/text_white"
                    android:id="@+id/showTextCityStateName"
                    android:textSize="14sp"
                    android:hint="@string/cityHint"/>


            </RelativeLayout>



            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/general_info_card"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="56dp"
                android:layout_marginBottom="8dp"
                card_view:cardBackgroundColor="#EEEEEE"
                >


                <LinearLayout
                    android:layout_margin="4dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_alignParentLeft="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/persInfo"
                            android:layout_margin= "6dp"
                            android:textSize="16sp"
                            android:textAllCaps="true"/>

                    </RelativeLayout>


                    <LinearLayout
                        android:layout_margin="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_marginLeft="16dp"
                            android:src="@drawable/ic_date_range_24dp"
                            android:layout_width="24dp"
                            android:layout_height="24dp" />

                        <TextView
                            android:id="@+id/showTextBirthDate"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="16dp"
                            android:textSize="12sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/DoBHint"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_gravity="center_vertical"
                        android:layout_margin="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_marginLeft="16dp"
                            android:src="@drawable/ic_phone_android_24dp"
                            android:layout_width="24dp"
                            android:layout_height="24dp" />

                        <TextView
                            android:id="@+id/showTextTelephone"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="16dp"
                            android:textSize="12sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/phoneHint"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_gravity="bottom"
                        android:layout_margin="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_marginLeft="16dp"
                            android:src="@drawable/ic_email_black_24dp"
                            android:layout_width="24dp"
                            android:layout_height="24dp" />

                        <TextView
                            android:id="@+id/showTextMail"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="16dp"
                            android:textSize="12sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/mailHint"/>

                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/bio_card"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="8dp"
                card_view:cardBackgroundColor="#EEEEEE"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <LinearLayout
                    android:layout_margin="4dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_alignParentLeft="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bio"
                            android:textSize="16sp"
                            android:layout_margin= "6dp"
                            android:textAllCaps="true"/>

                    </RelativeLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">



                        <TextView
                            android:id="@+id/showTextBio"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:hint="@string/bioHint"/>

                    </LinearLayout>



                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/favorite_books_card"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="8dp"
                card_view:cardBackgroundColor="#EEEEEE"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="32dp">


                <LinearLayout
                    android:layout_margin="4dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_alignParentLeft="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:text="@string/books"
                            android:layout_margin= "6dp"
                            android:textAllCaps="true"/>

                    </RelativeLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">



                        <TextView
                            android:id="@+id/showTextFavoriteBooks"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:hint="@string/booksHint"/>

                    </LinearLayout>


                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>
